# ohpc

components/compiler-families/arm-compilers-devel/SPECS/: arm-compilers-devel.spec
components/compiler-families/llvm-compilers/SPECS/: llvm-compilers.spec
components/dev-tools/easybuild/SOURCES/: bootstrap_eb.py-apply-2.5.0.patch  easybuild-framework-2.5.0-use_perf.patch
components/dev-tools/easybuild/SPECS/: easybuild.spec
components/dev-tools/scipy/SPECS/: python-scipy.spec
components/io-libs/adios/SPECS/: adios.spec
components/lustre/lustre-client/SPECS/: lustre.spec
components/mpi-families/mvapich2/SPECS/: mvapich2.spec
components/parallel-libs/boost/SPECS/: boost.spec
components/parallel-libs/trilinos/SOURCES/: Trilinos-trilinos-release-12-4-2-aarch64-naive.patch  trilions-aarch64.patch
components/parallel-libs/trilinos/SPECS/: trilinos.spec
components/perf-tools/papi/SPECS/: papi.spec
components/perf-tools/pdtoolkit/SPECS/: pdtoolkit.spec
components/provisioning/warewulf-ipmi/SOURCES/: warewulf-ipmi-3.6-config_guess.patch
components/provisioning/warewulf-ipmi/SPECS/: warewulf-ipmi.spec
components/provisioning/warewulf-nhc/SOURCES/: warewulf-nhc-1.4.1-diagn.patch  warewulf-nhc-remove_test_relying_on_proc_self.patch
components/provisioning/warewulf-nhc/SPECS/: warewulf-nhc.spec
components/provisioning/warewulf-provision/SOURCES/: warewulf-provision.config_guess.patch
components/provisioning/warewulf-provision/SPECS/: warewulf-provision.spec
components/runtimes/libomp/SOURCES/: 0001-Replace-enum-types-in-variadic-functions-by-build-in.patch  0002-Make-balanced-affinity-work-on-AArch64.patch  0003-Disable-KMP_CANCEL_THREADS-on-Android.patch  0004-kmp_taskdeps.cpp-Fix-debugging-output.patch  0005-Add-test-case-for-nested-creation-of-tasks.patch  0006-Fixed-x2APIC-discovery-for-256-processor-architectur.patch  0007-__kmp_free_task-Fix-for-serial-explicit-tasks-produc.patch  0008-Do-not-block-on-explicit-task-depending-on-proxy-tas.patch  0009-Mark-tests-with-task-dependencies-as-unsupported-wit.patch  0010-kmp_gsupport-Fix-library-initialization-with-taskgro.patch  0012-Fixes-for-hierarchical-barrier-possible-hang-if-team.patch  0013-cleanup-fixed-names-of-dummy-arguments-of-Fortran-in.patch  0014-Appease-older-gcc-compilers-for-the-many-microtask-a.patch  0015-Use-critical-reduction-method-when-atomic-is-not-ava.patch  0016-Replace-a-bad-instance-of-__kmp_free-with-KMP_CPU_FR.patch  0017-Decouple-the-kmp_affin_mask_t-type-from-determining-.patch  0018-Move-function-into-cpp-file-under-KMP_AFFINITY_SUPPO.patch  0019-OPENMP-Implementation-of-omp_get_default_device-and-.patch  0020-OPENMP-ppc64le-recognized-as-big-endian.patch  0021-Fix-bitmask-upper-bounds-check.patch  0022-OMPT-extend-ompt-tests-by-checks-for-frame-pointers.patch  0023-OMPT-Align-implementation-of-reenter-frame-address-t.patch  0024-OMPT-Reset-task-exit-frame-when-execution-is-finishe.patch  0025-OMPT-fix-__ompt_get_teaminfo-to-consult-lwt-entries-.patch  0026-OMPT-save-exit-address-to-lwt-if-available.patch  0027-OMPT-fix-task-frame-information-for-gomp-interface.patch  0028-cmake-Make-libgomp-libiomp5-alias-install-optional.patch  0029-Fix-respecting-LIBOMP_LLVM_LIT_EXECUTABLE-as-full-pa.patch  0030-Disable-monitor-thread-creation-by-default.patch  0031-Mixed-type-atomic-routines-for-unsigned-integers.patch  0032-Fix-incorrect-OpenMP-version-in-Fortran-module.patch  0033-test-Support-lit-executable-name.patch  0034-Insert-missing-checks-for-KMP_AFFINITY_CAPABLE-in-af.patch  0035-cmake-Fix-for-a-bug-https-llvm.org-bugs-show_bug.cgi.patch  0036-Enable-omp_get_schedule-to-return-static-steal-type.patch  0037-Code-cleanup-for-the-runtime-without-monitor-thread.patch  0038-Mixed-type-atomic-routines-added-for-capture-and-upd.patch  0039-Fix-a-compile-error-on-musl-libc-due-to-strerror_r-p.patch  0040-Fix-OpenMP-4.0-library-build.patch  0041-OpenMP-Fix-issue-with-directives-used-in-a-macro.patch  (+14 more)
components/runtimes/libomp/SPECS/: libomp.spec
components/serial-libs/openblas/SOURCES/: OpenBLAS-aarch64.patch
components/serial-libs/openblas/SPECS/: openblas.spec
components/serial-libs/superlu/SPECS/: superlu.spec
tests/: Makefile.am  configure.ac
tests/runtimes/libomp/: .gitignore  configure.ac
tests/runtimes/libomp/ohpc-tests/: test_compiler_families
tests/runtimes/libomp/tests/: .gitignore  Makefile.am  runctest  runftest
tests/runtimes/libomp/tests/ohpc_module/: .gitignore  test_module
